array.island.Island.scala.code
var compt: Int =0
def island(num:Array[Int]): Int = {
  for 
}